# ResourceStory

./: .gitignore  config.py  main.py  pyproject.toml
core/: config.py  enum.py  exceptions.py  models.py  parse_info.py  service.py  utils.py
core/models/: resource.py  user.py
data/: exceptions.py  filter.py  service_bd.py  utils.py
data_io/: export_data.py  import_data.py
ui/cli/: handlers.py  main_cli.py
ui/tg_bot/: dispatcher.py
ui/tg_bot/callbacks/: resource.py
ui/tg_bot/handlers/: common.py  resource.py
ui/tg_bot/keyboards/: resource.py
ui/tg_bot/middlewares/: logger.py
ui/tg_bot/states/: resource.py
ui/tg_bot/utils/: error_handler.py  message.py
