[project]
name = "resourcestory"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name", email = "you@example.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "requests[socks]>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "aiogram (>=3.30.0,<4.0.0)",
    "aiohttp-socks (>=0.11.0,<0.12.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry]
package-mode = false
